fix: fix Z-index priority for modal

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -11,6 +11,6 @@
 }
 
 .card:hover{
-    z-index: 1000;
+    z-index: 2;
     transform: scale(1.2);
 }
